mobile design is pretty much finished, made nav bar fixed, adjusted spacing and sizes of text

--- a/about.css
+++ b/about.css
@@ -48,16 +48,18 @@
 
   .hamburger{
       position: absolute;
-      top: 3%;
+      top: 50%;
       right: 5%;
-      transform: translate(-5%, -3%);
+      transform: translate(-5%, -50%);
       cursor: pointer;
       z-index: 5;
   }
 
   .nav-bar{
-      max-width: 100%;
+      width: 100%;
       height: 10vh;
+      position: fixed;
+      z-index: 3;
   }
 
   .nav{
@@ -111,7 +113,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-
+      height: 85vh;
   }
 
   .wedding-pic{
@@ -121,5 +123,51 @@
       padding: 0;
   }
 
+  figcaption{
+      margin-bottom: 20px;
+  }
+
+  section{
+      text-align: center;
+  }
+
+  section p{
+      margin: 15px 15px;
+      font-weight: normal;
+      
+  }
+
+  main{
+      text-align: center;
+  }
+
+  .subheading{
+      font-size: 18px;
+      font-weight: bolder;
+  }
+
+  main p{
+      margin: 15px 15px;
+      font-weight: normal;
+      
+  }
+
+  footer{
+      background: black;
+      height: 5vh;
+      display: flex;
+      align-items: center;
+      justify-content: start;
+  }
+
+  footer p {
+      margin-left: 15px;
+  }
+
+  /* For tablets */
+
+
+
+  /* For desktop */
   
   
